# harvest

./: .env.example  .gitignore  CONTEXT.md  DECISIONS.md  LICENSE  PROTOCOL.md  README.md  SPEC.md  pyproject.toml
bili_tool/: __init__.py  cache.py  cli.py  config.py  frames.py  merge.py  player_api.py  probe.py  quality.py  resolve.py  schema.py  subtitles.py  transcribe.py  vision.py
docs/superpowers/plans/: 2026-07-02-harvest-youtube.md  2026-07-03-harvest-danmaku-highlike.md  2026-07-04-author-danmaku.md  2026-07-04-command-danmaku-interactions.md  2026-07-04-danmaku-md-cap-config.md  2026-07-04-render-markdown-injection.md  2026-07-04-youtube-auto-captions.md  2026-07-05-vision-genre-fit.md  2026-07-05-youtube-tier1-clean-tag-fallback.md
docs/superpowers/specs/: 2026-07-03-youtube-js-runtime-hardening-design.md  2026-07-04-render-markdown-injection-design.md
harvest/: cli.py  config.py  danmaku.py  danmaku_proto.py  frames.py  interactions.py  interactions_proto.py  merge.py  parts.py  player_api.py  probe.py  resolve.py  schema.py  subtitles.py  transcribe.py  vision.py
harvest/providers/: __init__.py  base.py  bilibili.py  youtube.py  youtube_autosub.py
tests/: test_cache.py  test_cli.py  test_config.py  test_danmaku.py  test_danmaku_proto.py  test_frames.py  test_interactions.py  test_interactions_proto.py  test_live_youtube.py  test_merge.py  test_parts.py  test_player_api.py  test_probe.py  test_providers_base.py  test_providers_bilibili.py  test_providers_youtube.py  test_quality.py  test_resolve.py  test_schema_vision.py  test_subtitles.py  test_transcribe.py  test_vision.py  test_youtube_autosub.py
tests/fixtures/youtube/: dQw4w9WgXcQ.info.json
