[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bili-tool"
version = "0.1.0"
description = "Ingestion front-door: a bilibili URL -> a timeline-aligned transcript + per-frame visual-notes bundle for a downstream KB."
requires-python = ">=3.11"
readme = "README.md"

# Spine deps (build steps 1-2). Heavier stage deps live in optional groups below and are
# installed when their stage lands, so the spine stays cheap to set up. Versions pinned at install.
dependencies = [
    "yt-dlp>=2026.6.9",
    "pydantic>=2.13",
    "python-dotenv>=1.2",
]

[project.optional-dependencies]
# step 3: quality gate + Whisper fallback. CUDA runtime DLLs (cublas/cudnn) come via the nvidia
# wheels on Windows so ctranslate2 can find cublas64_12.dll without a system CUDA install.
transcribe = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12; platform_system == 'Windows'",
    "nvidia-cudnn-cu12; platform_system == 'Windows'",
    "nvidia-cuda-runtime-cu12; platform_system == 'Windows'",
]
# step 4: frame extraction + perceptual dedup
frames = ["scenedetect>=0.7", "Pillow>=12", "imagehash>=4.3.2"]
# step 5: vision captioning
vision = ["openai>=2.44"]
dev = ["pytest>=8"]

[project.scripts]
bili-tool = "bili_tool.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["bili_tool"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 99
