[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "harvest"
version = "0.1.0"
description = "Ingestion front-door: a bilibili URL -> a timeline-aligned transcript + per-frame visual-notes bundle for a downstream knowledge base (Atlas)."
requires-python = ">=3.11"
readme = "README.md"

# Spine deps (build steps 1-2). Heavier stage deps live in optional groups below and are
# installed when their stage lands, so the spine stays cheap to set up. Versions pinned at install.
dependencies = [
    "yt-dlp>=2026.6.9",
    "pydantic>=2.13",
    "python-dotenv>=1.2",
    "pyyaml>=6",
]

[project.optional-dependencies]
# step 3: quality gate + Whisper fallback. CUDA runtime DLLs (cublas/cudnn) come via the nvidia
# wheels on Windows so ctranslate2 can find cublas64_12.dll without a system CUDA install.
transcribe = [
    "faster-whisper>=1.2.1",
    "nvidia-cublas-cu12; platform_system == 'Windows'",
    "nvidia-cudnn-cu12; platform_system == 'Windows'",
    "nvidia-cuda-runtime-cu12; platform_system == 'Windows'",
]
# step 4: frame extraction + perceptual dedup
frames = ["scenedetect>=0.7", "Pillow>=12", "imagehash>=4.3.2"]
# step 5: vision captioning
vision = ["openai>=2.44"]
dev = ["pytest>=8"]

[project.scripts]
harvest = "harvest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["harvest"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not live'"
markers = ["live: hits the network against a real public video (opt in with -m live)"]

[tool.ruff]
line-length = 99
